<resources>
    <string name="app_name">Calculate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="title_name">Сложение</string>
    <string name="button_understand_text">Понятно</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="test_level">Тестовый</string>
    <string name="easy_level">Легкий</string>
    <string name="medium_level">Средний</string>
    <string name="hard_level">Тяжелый</string>
    <string name="answers_progress">Правильных ответов: %s\nМинимум: %s</string>
    <string name="retry">Попробовать снова</string>
    <string name="game_over">Game Over</string>
    <string name="tv_min_count_of_right_answers">Необходимое количество правильных ответов: %s</string>
    <string name="tv_user_score">Ваш счет: %s</string>
    <string name="tv_min_percentage">Необходимый процент правильных ответов: %s%%</string>
    <string name="tv_user_percentage">Ваш процент: %s%%</string>
    <string name="plus_option">+</string>
    <string name="question_symbol">\?</string>
    <string name="equal_symbol">=</string>
    <string name="game_description">Правила игры:\nИзвестно первое слагаемое и сумма, требуется найти второе слагаемое под знаком \"?\"\nНапример: 5 + ? = 9, тогда искомое слагаемое равно 4.</string>
</resources>