<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.calculate.presentation.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.GameFragment">

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@{viewModel.formattedTime}"
            android:textColor="@android:color/holo_green_light"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00:00" />

        <TextView
            android:id="@+id/tv_left_number"
            style="@style/AnswerOptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tv_answers_progress"
            app:layout_constraintEnd_toStartOf="@+id/tv_arithmetic_option"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:numberAsText="@{viewModel.gameQuestion.visibleNumber}"
            tools:text="70" />

        <TextView
            android:id="@+id/tv_arithmetic_option"
            style="@style/AnswerOptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_option"
            app:layout_constraintBottom_toBottomOf="@+id/tv_left_number"
            app:layout_constraintEnd_toStartOf="@+id/tv_question"
            app:layout_constraintStart_toEndOf="@+id/tv_left_number" />

        <TextView
            android:id="@+id/tv_question"
            style="@style/AnswerOptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_symbol"
            android:textColor="@android:color/holo_orange_dark"
            app:layout_constraintBottom_toBottomOf="@+id/tv_arithmetic_option"
            app:layout_constraintEnd_toStartOf="@+id/tv_equal"
            app:layout_constraintStart_toEndOf="@+id/tv_arithmetic_option" />

        <TextView
            android:id="@+id/tv_equal"
            style="@style/AnswerOptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equal_symbol"
            app:layout_constraintBottom_toBottomOf="@+id/tv_question"
            app:layout_constraintEnd_toStartOf="@+id/tv_result"
            app:layout_constraintStart_toEndOf="@+id/tv_question" />

        <TextView
            android:id="@+id/tv_result"
            style="@style/AnswerOptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_equal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_equal"
            app:numberAsText="@{viewModel.gameQuestion.sum}"
            tools:text="100" />

        <TextView
            android:id="@+id/tv_answers_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@{viewModel.progressAnswers}"
            app:layout_constraintBottom_toTopOf="@+id/progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_left_number"
            app:tvAnswersProgressTextColor="@{viewModel.enoughCountOfRightAnswers}"
            tools:text="@string/answers_progress" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:max="100"
            android:secondaryProgress="@{viewModel.minPercent}"
            android:secondaryProgressTint="@android:color/background_dark"
            app:layout_constraintBottom_toTopOf="@+id/tv_answer_option_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_answers_progress"
            app:progressBarTintList="@{viewModel.enoughPercentOfRightAnswers}"
            app:setProgressInBar="@{viewModel.percentOfRightAnswers}" />


        <TextView
            android:id="@+id/tv_answer_option_1"
            style="@style/QuestionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:text="@{viewModel.gameQuestion.answerOptions.get(0).toString()}"
            app:layout_constraintBottom_toTopOf="@id/tv_answer_option_4"
            app:layout_constraintEnd_toStartOf="@+id/tv_answer_option_2"
            app:layout_constraintStart_toStartOf="parent"
            app:onAnswerOptionCLickListener="@{(answerOption) -> viewModel.chooseAnswer(answerOption)}"
            tools:text="2" />

        <TextView
            android:id="@+id/tv_answer_option_2"
            style="@style/QuestionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:text="@{viewModel.gameQuestion.answerOptions.get(1).toString()}"
            app:layout_constraintBottom_toTopOf="@id/tv_answer_option_5"
            app:layout_constraintEnd_toStartOf="@+id/tv_answer_option_3"
            app:layout_constraintStart_toEndOf="@+id/tv_answer_option_1"
            app:onAnswerOptionCLickListener="@{(answerOption) -> viewModel.chooseAnswer(answerOption)}"
            tools:text="15" />

        <TextView
            android:id="@+id/tv_answer_option_3"
            style="@style/QuestionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:text="@{viewModel.gameQuestion.answerOptions.get(2).toString()}"
            app:layout_constraintBottom_toTopOf="@id/tv_answer_option_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_answer_option_2"
            app:onAnswerOptionCLickListener="@{(answerOption) -> viewModel.chooseAnswer(answerOption)}"
            tools:text="56" />

        <TextView
            android:id="@+id/tv_answer_option_4"
            style="@style/QuestionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:text="@{viewModel.gameQuestion.answerOptions.get(3).toString()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_answer_option_5"
            app:layout_constraintStart_toStartOf="parent"
            app:onAnswerOptionCLickListener="@{(answerOption) -> viewModel.chooseAnswer(answerOption)}"
            tools:text="10" />

        <TextView
            android:id="@+id/tv_answer_option_5"
            style="@style/QuestionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@{viewModel.gameQuestion.answerOptions.get(4).toString()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_answer_option_6"
            app:layout_constraintStart_toEndOf="@+id/tv_answer_option_4"
            app:onAnswerOptionCLickListener="@{(answerOption) -> viewModel.chooseAnswer(answerOption)}"
            tools:text="8" />

        <TextView
            android:id="@+id/tv_answer_option_6"
            style="@style/QuestionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:text="@{viewModel.gameQuestion.answerOptions.get(5).toString()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_answer_option_5"
            app:onAnswerOptionCLickListener="@{(answerOption) -> viewModel.chooseAnswer(answerOption)}"
            tools:text="1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>